[package]
name = "crabmon"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
sysinfo = "0.30"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Unix-only for sending signals (SIGTERM)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[package.metadata.deb]
maintainer = "Vladislav Ananyev <nexus.riot@gmail.com>"
copyright = "2025, Vladislav Ananyev"
license-file = ["LICENSE", "0"]
extended-description = """\
crabmon is a PoC Rust TUI system monitor: per-core CPU charts, \
process table, network rates, and disk usage.
"""
assets = [
  ["target/release/crabmon", "/usr/bin/", "755"]
]
section = "utils"
priority = "optional"


